@@ -33,6 +33,8 @@
 	  file pointer.
 	* Fix memory leak in contrib/python: ldns_pkt.new_query.
 	* Fix buffer overflow in fget_token and bget_token.
+	* ldns-verify-zone NSEC3 checking from quadratic to linear performance.
+	  Thanks NIC MX (nicmexico.mx)
 
 1.6.16	2012-11-13
 	* Fix Makefile to build pyldns with BSD make
